--- a/index.html
+++ b/index.html
@@ -16,18 +16,58 @@
 </head>
 
 <header>
-
+    <h1>Weather Dashboard</h1>
 </header>
 
 <body>
 
+    <div class="container">
+        <div>
+            <h2>Search for a City:</h2>
+            <textarea id="search-box"></textarea>
+            <button id="search-button"></button>
+        </div>
+        <div>
+            <ul>
+                <button id="city-history"></button>
+                <button id="city-history"></button>
+                <button id="city-history"></button>
+                <button id="city-history"></button>
+                <button id="city-history"></button>
+                <button id="city-history"></button>
+                <button id="city-history"></button>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container">
+        <div>
+            <h2 id="current-city">Atlanta</h2>
+            <p id="current-city-temp">Temp:</p>
+            <p id="current-city-wind">Wind:</p>
+            <p id="current-city-humidity">Humidity:</p>
+            <p id="current-city-uv-index">UV Index:</p>
+        </div>
+        <div>
+            <h3>5-Day Forecast:</h3>
+            <div class="row">
+                <div id="api-row">
+                    <div id="weekday-item"></div>
+                    <div id="weekday-item"></div>
+                    <div id="weekday-item"></div>
+                    <div id="weekday-item"></div>
+                    <div id="weekday-item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
-    
+
 </body>
 
 </html>
