--- a/index.html
+++ b/index.html
@@ -15,48 +15,64 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
-<header>
-    <h1>Weather Dashboard</h1>
+<header class="bg-primary">
+    <h1 class="text-center text-white">Weather Dashboard</h1>
 </header>
 
 <body>
 
-    <div class="container">
-        <div>
-            <h2>Search for a City:</h2>
-            <textarea id="search-box"></textarea>
-            <button id="search-button"></button>
-        </div>
-        <div>
-            <ul>
-                <button id="city-history"></button>
-                <button id="city-history"></button>
-                <button id="city-history"></button>
-                <button id="city-history"></button>
-                <button id="city-history"></button>
-                <button id="city-history"></button>
-                <button id="city-history"></button>
-            </ul>
-        </div>
-    </div>
+    <div class="container-fluid">
+        <div class="row mx-auto">
+            <div class="pr-r pt-5 col-lg-3">
+                <div class="">
+                    <h2 class="">Search for a City:</h2>
+                    <input type="text" id="search-box" class="col-lg-12 rounded">
+                    <button type="button" id="search-button" class="btn-primary btn-lg btn-block mt-3">Search
+                    </button>
+                </div>
+                <div class="pt-5">
+                    <div>
+                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                    </div>
+                </div>
+            </div>
 
-    <div class="container">
-        <div>
-            <h2 id="current-city">Atlanta</h2>
-            <p id="current-city-temp">Temp:</p>
-            <p id="current-city-wind">Wind:</p>
-            <p id="current-city-humidity">Humidity:</p>
-            <p id="current-city-uv-index">UV Index:</p>
-        </div>
-        <div>
-            <h3>5-Day Forecast:</h3>
-            <div class="row">
-                <div id="api-row">
-                    <div id="weekday-item"></div>
-                    <div id="weekday-item"></div>
-                    <div id="weekday-item"></div>
-                    <div id="weekday-item"></div>
-                    <div id="weekday-item"></div>
+            <div class="pl-5 pt-5 col-lg-9">
+                <div class="border pl-3 pb-3">
+                    <h2 id="current-city">Atlanta (8/30/2021) Cloud Icon</h2>
+                    <p id="current-city-temp">Temp:</p>
+                    <p id="current-city-wind">Wind:</p>
+                    <p id="current-city-humidity">Humidity:</p>
+                    <p id="current-city-uv-index">UV Index:</p>
+                </div>
+                <div class="mt-3">
+                    <h3>5-Day Forecast:</h3>
+                    <div class="container">
+                        <div id="api-row" class="row">
+                            <div id="weekday-item" class="pr-4">
+                                <img src="http://via.placeholder.com/175x225">
+                            </div>
+                            <div id="weekday-item" class="pr-4">
+                                <img src="http://via.placeholder.com/175x225">
+                            </div>
+                            <div id="weekday-item" class="pr-4">
+                                <img src="http://via.placeholder.com/175x225">
+                            </div>
+                            <div id="weekday-item" class="pr-4">
+                                <img src="http://via.placeholder.com/175x225">
+                            </div>
+                            <div id="weekday-item" class="pr-4">
+                                <img src="http://via.placeholder.com/175x225">
+                            </div> 
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
