--- a/index.html
+++ b/index.html
@@ -26,26 +26,32 @@
             <div class="pr-r pt-5 col-lg-3">
                 <div class="">
                     <h2 class="">Search for a City:</h2>
-                    <input type="text" id="search-box" class="col-lg-12 rounded">
+                    <form id="city-form">
+                    <input id="city-search" class="col-lg-12 rounded">
                     <button type="button" id="search-button" class="btn-primary btn-lg btn-block mt-3">Search
                     </button>
+                    </form>
                 </div>
-                <div class="pt-5">
+                <div id="city-buttons" class="pt-5">
                     <div>
-                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button type="button" id="city-history" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+
+
                     </div>
                 </div>
             </div>
 
             <div class="pl-5 pt-5 col-lg-9">
-                <div class="border pl-3 pb-3">
+                <div id="city-container" class="border px-3 pb-3 pt-3">
                     <h2 id="current-city">Atlanta (8/30/2021) Cloud Icon</h2>
                     <p id="current-city-temp">Temp:</p>
                     <p id="current-city-wind">Wind:</p>
@@ -55,21 +61,21 @@
                 <div class="mt-3">
                     <h3>5-Day Forecast:</h3>
                     <div class="container">
-                        <div id="api-row" class="row">
-                            <div id="weekday-item" class="pr-4">
-                                <img src="http://via.placeholder.com/175x225">
+                        <div id="api-row" class="row mt-3">
+                            <div id="weekday-item" class="pr-1 mt-1">
+                                <img src="http://via.placeholder.com/170x225">
                             </div>
-                            <div id="weekday-item" class="pr-4">
-                                <img src="http://via.placeholder.com/175x225">
+                            <div id="weekday-item" class="pr-1 mt-1">
+                                <img src="http://via.placeholder.com/170x225">
                             </div>
-                            <div id="weekday-item" class="pr-4">
-                                <img src="http://via.placeholder.com/175x225">
+                            <div id="weekday-item" class="pr-1 mt-1">
+                                <img src="http://via.placeholder.com/170x225">
                             </div>
-                            <div id="weekday-item" class="pr-4">
-                                <img src="http://via.placeholder.com/175x225">
+                            <div id="weekday-item" class="pr-1 mt-1">
+                                <img src="http://via.placeholder.com/170x225">
                             </div>
-                            <div id="weekday-item" class="pr-4">
-                                <img src="http://via.placeholder.com/175x225">
+                            <div id="weekday-item" class="pr-1 mt-1">
+                                <img src="http://via.placeholder.com/170x225">
                             </div> 
                         </div>
                     </div>
