--- a/index.html
+++ b/index.html
@@ -37,23 +37,14 @@
                         <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
                         <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
                         <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-
-
                     </div>
                 </div>
             </div>
 
             <div class="pl-5 pt-5 col-lg-9">
                 <div id="city-container" class="border px-3 pb-3 pt-3">
-                    <h2 id="current-city">Atlanta (8/30/2021) Cloud Icon</h2>
-                    <p id="current-city-temp">Temp:</p>
+                    <h2 id="current-city"></h2>
+                    <p>Temp:</p> <p id="current-city-temp"></p>
                     <p id="current-city-wind">Wind:</p>
                     <p id="current-city-humidity">Humidity:</p>
                     <p id="current-city-uv-index">UV Index:</p>
