humidity and uv index

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <div class="pl-5 pt-5 col-lg-9">
                 <div id="city-container" class="border px-3 pb-3 pt-3">
                     <h2 id="current-city"></h2>
-                    <p>Temp:</p> <p id="current-city-temp"></p>
-                    <p id="current-city-wind">Wind:</p>
-                    <p id="current-city-humidity">Humidity:</p>
-                    <p id="current-city-uv-index">UV Index:</p>
+                    <p>Temp F:</p> <p id="current-city-temp"></p>
+                    <p>Wind MPH:</p> <p id="current-city-wind"></p>
+                    <p>Humidity:</p> <p id="current-city-humidity"></p>
+                    <p>UV Index:</p> <p id="current-city-uv-index"></p>
                 </div>
                 <div class="mt-3">
                     <h3>5-Day Forecast:</h3>
