added weather all weather data, time, and bugged icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
             <div class="pl-5 pt-5 col-lg-9">
                 <div id="city-container" class="border px-3 pb-3 pt-3">
-                    <h2 id="current-city"></h2>
+                    <div class="row">
+                    <h2 id="current-city"></h2><h2 id="current-date"></h2><h2 id="current-date-weather-icon"></h2>
+                    </div>
                     <p>Temp F:</p> <p id="current-city-temp"></p>
                     <p>Wind MPH:</p> <p id="current-city-wind"></p>
                     <p>Humidity:</p> <p id="current-city-humidity"></p>
