--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="pl-5 pt-5 col-lg-9">
                 <div id="city-container" class="border px-3 pb-3 pt-3">
                     <div class="row">
-                    <h2 id="current-city"></h2><h2 id="current-date"></h2><h2 id="current-date-weather-icon"></h2>
+                    <h2 id="current-city"></h2><h2 id="current-date"> </h2><h2 id="current-date-weather-icon"></h2>
                     </div>
                     <p>Temp F:</p> <p id="current-city-temp"></p>
                     <p>Wind MPH:</p> <p id="current-city-wind"></p>
@@ -55,20 +55,12 @@
                     <h3>5-Day Forecast:</h3>
                     <div class="container">
                         <div id="api-row" class="row mt-3">
-                            <div id="weekday-item" class="pr-1 mt-1">
-                                <img src="http://via.placeholder.com/170x225">
-                            </div>
-                            <div id="weekday-item" class="pr-1 mt-1">
-                                <img src="http://via.placeholder.com/170x225">
-                            </div>
-                            <div id="weekday-item" class="pr-1 mt-1">
-                                <img src="http://via.placeholder.com/170x225">
-                            </div>
-                            <div id="weekday-item" class="pr-1 mt-1">
-                                <img src="http://via.placeholder.com/170x225">
-                            </div>
-                            <div id="weekday-item" class="pr-1 mt-1">
-                                <img src="http://via.placeholder.com/170x225">
+                            <div id="weekday-item" class="pr-1 mt-1 weekday-item">
+                                <p id= "weekday-item-1-date"></p>
+                                <p id= "weekday-item-1-icon"></p>
+                                <p>Temp:</p><p id= "weekday-item-1-temp"></p>
+                                <p>Wind:</p><p id= "weekday-item-1-wind"></p>
+                                <p>UV:</p><p id= "weekday-item-1-humidity"></p>
                             </div> 
                         </div>
                     </div>
