--- a/index.html
+++ b/index.html
@@ -20,56 +20,60 @@
 </header>
 
 <body>
-
     <div class="container-fluid">
         <div class="row mx-auto">
+
             <div class="pr-r pt-5 col-lg-3">
+                <!--Search Container-->
                 <div class="">
                     <h2 class="">Search for a City:</h2>
                     <form id="city-form">
-                    <input id="city-search" class="col-lg-12 rounded">
-                    <button type="button" id="search-button" class="btn-primary btn-lg btn-block mt-3">Search
-                    </button>
+                        <input id="city-search" class="col-lg-12 rounded">
+                        <button type="button" id="search-button" class="btn-primary btn-lg btn-block mt-3">Search
+                        </button>
                     </form>
                 </div>
+                <!--Searched Cities-->
                 <div id="city-buttons" class="pt-5">
                     <div>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city= "" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city="" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city="" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button data-city="" class="btn-secondary btn-lg btn-block">City Name</button>
                     </div>
                 </div>
             </div>
 
+            <!--Current City-->
             <div class="pl-5 pt-5 col-lg-9">
                 <div id="city-container" class="border px-3 pb-3 pt-3">
                     <div class="row">
-                    <h2 id="current-city" class="mt-2 ml-3 mr-3"></h2><h2 id="current-date" class="mt-2 mr-3"> </h2><h2 id="current-date-weather-icon"></h2>
+                        <h2 id="current-city" class="mt-2 ml-3 mr-3"></h2>
+                        <h2 id="current-date" class="mt-2 mr-3"> </h2>
+                        <h2 id="current-date-weather-icon"></h2>
                     </div>
                     <p id="current-city-temp"></p>
                     <p id="current-city-wind"></p>
                     <p id="current-city-humidity"></p>
                     <p id="current-city-uv-index"></p>
                 </div>
+                <!--Five Day Forecast-->
                 <div class="mt-3">
                     <h3>5-Day Forecast:</h3>
                     <div class="container">
                         <div id="api-row" class="row mt-3">
                             <div id="weekday-item">
-                                <p id= "weekday-item-1-date"></p>
-                                <p id= "weekday-item-1-icon"></p>
-                                <p id= "weekday-item-1-temp"></p>
-                                <p id= "weekday-item-1-wind"></p>
-                                <p id= "weekday-item-1-humidity"></p>
-                            </div> 
+                                <p id="weekday-item-1-date"></p>
+                                <p id="weekday-item-1-icon"></p>
+                                <p id="weekday-item-1-temp"></p>
+                                <p id="weekday-item-1-wind"></p>
+                                <p id="weekday-item-1-humidity"></p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
