--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
-<header class="bg-primary">
+<header class="bg-secondary">
     <h1 class="text-center text-white">Weather Dashboard</h1>
 </header>
 
