--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
-<header class="bg-secondary">
+<header class="bg-dark">
     <h1 class="text-center text-white">Weather Dashboard</h1>
 </header>
 
@@ -45,7 +45,7 @@
 
             <!--Current City-->
             <div class="pl-5 pt-5 col-lg-9">
-                <div id="city-container" class="border px-3 pb-3 pt-3">
+                <div id="city-container" class="border px-3 pb-3 pt-3 current-city">
                     <div class="row">
                         <h2 id="current-city" class="mt-2 ml-3 mr-3"></h2>
                         <h2 id="current-date" class="mt-2 mr-3"> </h2>
