added placeholder for search bar and removed h2 element

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
             <div class="pr-r pt-5 col-lg-3">
                 <!--Search Container-->
                 <div class="">
-                    <h2 class="">Search for a City:</h2>
                     <form id="city-form">
-                        <input id="city-search" class="col-lg-12 rounded">
+                        <input id="city-search" class="col-lg-12 rounded text-center" placeholder="Search for a City">
                         <button type="button" id="search-button" class="btn-primary btn-lg btn-block mt-3">Search
                         </button>
                     </form>
