major refactor + working search box

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
                 </div>
                 <!--Searched Cities-->
                 <div id="city-buttons" class="pt-5">
+                    <h2 class="text-center">Search History</h2>
                     <div>
-                        <button data-city="" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city="" class="btn-secondary btn-lg btn-block">City Name</button>
-                        <button data-city="" class="btn-secondary btn-lg btn-block">City Name</button>
+                        <button id="city-history" class="btn-secondary btn-lg btn-block"></button>
                     </div>
                 </div>
             </div>
@@ -58,16 +57,7 @@
                 <!--Five Day Forecast-->
                 <div class="mt-3">
                     <h3>5-Day Forecast:</h3>
-                    <div class="container">
-                        <div id="api-row" class="row mt-3">
-                            <div id="weekday-item">
-                                <p id="weekday-item-1-date"></p>
-                                <p id="weekday-item-1-icon"></p>
-                                <p id="weekday-item-1-temp"></p>
-                                <p id="weekday-item-1-wind"></p>
-                                <p id="weekday-item-1-humidity"></p>
-                            </div>
-                        </div>
+                    <div id="forecast" class="container mt-3">
                     </div>
                 </div>
             </div>
