--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
                     </form>
                 </div>
                 <!--Searched Cities-->
-                <div id="city-buttons" class="pt-5">
+                <div class="pt-5">
                     <h2 class="text-center">Search History</h2>
-                    <div>
-                        <button id="city-history" class="btn-secondary btn-lg btn-block"></button>
+                    <div id ="city-buttons">
                     </div>
                 </div>
             </div>
