--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!--Search Container-->
                 <div class="">
                     <form id="city-form">
-                        <input id="city-search" class="col-lg-12 rounded text-center" placeholder="Search for a City">
+                        <input id="city-search" class="col-lg-12 rounded text-center" placeholder="Search for a City" onfocus="this.value=''">
                         <button type="button" id="search-button" class="btn-primary btn-lg btn-block mt-3">Search
                         </button>
                     </form>
