--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <!--Current City-->
-            <div class="pl-5 pt-5 col-lg-9">
+            <div class="pt-5 col-lg-9">
                 <div id="city-container" class="border px-3 pb-3 pt-3 current-city">
                     <div class="row">
                         <h2 id="current-city" class="mt-2 ml-3 mr-3"></h2>
