refactor & pesudocode cleanup

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p id="current-city-uv-index"></p>
                 </div>
                 <!--Five Day Forecast-->
-                <div class="mt-3">
+                <div class="mt-3 card-holder">
                     <h3>5-Day Forecast:</h3>
                     <div id="forecast" class="container mt-3">
                     </div>
